--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+alloy = { version = "0.7.0", features = ["full"] }
+eyre = "0.6.12"
+tokio = { version = "1.41.1", features = ["full"] }
