--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 alloy = { version = "0.7.0", features = ["full"] }
 eyre = "0.6.12"
+futures-util = "0.3.31"
 tokio = { version = "1.41.1", features = ["full"] }
+tokio-stream = { version = "0.1.16", features = ["full"] }
